[add] api, data class [update] jdk, gradle, kotlin env fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">facebook-android-lite</string>
+
+    <string name="facebook_login">페이스북 로그인</string>
 </resources>
